src/objects/Loan_Partner_Experience_Survey__c.object
<CustomObject>
    <description>Survey tracking loan partner feedback on portal + experience</description>
    <fields>
        <fullName>How_did_you_hear_about_BW__c</fullName>
        <description>How did partner hear about BW?</description>
        <label>How did you hear about BW?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I met the BlueWave team at a trade show or community event</fullName>
                </value>
                <value>
                    <fullName>Another solar installer mentioned BlueWave</fullName>
                </value>
                <value>
                    <fullName>A customer mentioned hearing about BlueWave loans</fullName>
                </value>
                <value>
                    <fullName>Someone from BlueWave reached out to me directly</fullName>
                </value>
                <value>
                    <fullName>I saw BlueWave advertising and followed up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NPS__c</fullName>
        <description>How likely are you to recommend BW to a friend?</description>
        <label>NPS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Open_end_improvement_feedback__c</fullName>
        <description>Open ended improvement feedback</description>
        <label>Open-end improvement feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rank_customer_opinion__c</fullName>
        <description>Rank features in order of importance to your customers (based on what they tell you)</description>
        <label>Rank customer opinion</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rank_features_for_exclusivity__c</fullName>
        <description>Ranking of features that make you work exclusively with BlueWave for residential solar finance</description>
        <label>Rank features for exclusivity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rate_this_feature_Dashboard_view_of_al__c</fullName>
        <description>Portal feature rating - Dashboard view of all customers &amp; pending customers</description>
        <label>Rate this feature - Dashboard view</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate_this_feature_Emailing_application__c</fullName>
        <description>Portal feature rating - Emailing application forms</description>
        <label>Rate this feature - Emailing application</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate_this_feature_Reaching_Support__c</fullName>
        <description>Portal feature rating - Reaching Partner Support</description>
        <label>Rate this feature - Reaching Support</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate_this_feature_Run_credit__c</fullName>
        <description>Portal feature rating - Running credit check</description>
        <label>Rate this feature - Run credit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate_this_feature_Submit_system_info__c</fullName>
        <description>Portal feature rating - Submitting system information</description>
        <label>Rate this feature - Submit system info</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_s_in_which_you_partner__c</fullName>
        <description>Partner Feedback Survey - Q1 What states you work in</description>
        <label>State(s) in which you partner</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Massachusetts - Mass Solar Loan</fullName>
                </value>
                <value>
                    <fullName>Massachusetts - BlueWave Home Solar Loan</fullName>
                </value>
                <value>
                    <fullName>North Carolina</fullName>
                </value>
                <value>
                    <fullName>South Carolina</fullName>
                </value>
                <value>
                    <fullName>Rhode Island</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Loan Partner Experience Survey Response</label>
    <nameField>
        <label>Loan Partner Experience Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Partner Experience Survey Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>